# VtuberAgent

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json  websocket_test.html
config/: app_config.example.toml
src/: config.rs  errors.rs  main.rs  orchestrator.rs  sse.rs
src/agents/: mod.rs
src/api/: websocket_server.rs
src/auth/: mod.rs
src/capabilities/: conversation.rs  image.rs  mod.rs  music.rs  video.rs
src/config/: mod.rs
src/intent/: classifier.rs  mod.rs
src/live/: mod.rs  packet.rs
src/memory/: mod.rs
src/models/: mod.rs
src/providers/: mod.rs  zhipu.rs
src/services/: mod.rs
src/tools/: mod.rs
src/util/: mod.rs  time.rs  writer.rs
src/workflows/: mod.rs
web/: sse-test.html
