[package]
name = "VutberAgent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
rig-core = { version = "0.23.1", features = ["audio", "image"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs", "signal", "io-std", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
futures-util = "0.3"
hmac = "0.12"
md-5 = "0.10"
sha2 = "0.10"
flate2 = { version = "1.1", features = ["zlib"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
hex = "0.4"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
